--- a/prepros-6.config
+++ b/prepros-6.config
@@ -17,9 +17,19 @@
     ],
     "hideUnwatchedFiles": false
   },
-  "imports": [],
+  "imports": [
+    {
+      "path": "style.scss",
+      "imports": [
+        "scss/_variables.scss",
+        "scss/_common.scss",
+        "scss/_hero-image.scss",
+        "scss/_footer.scss"
+      ]
+    }
+  ],
   "projectView": {
-    "selectedView": "file-tree"
+    "selectedView": "settings"
   },
   "fileWatcher": {
     "enabled": true,
@@ -60,12 +70,12 @@
     "wp-includes"
   ],
   "server": {
-    "port": 7883,
+    "port": 7915,
     "assignNewPortAutomatically": true,
     "enable": true,
     "proxy": {
-      "enable": false,
-      "url": ""
+      "enable": true,
+      "url": "http://jungleflora.local/"
     }
   },
   "browser-sync": {
