--- a/prepros-6.config
+++ b/prepros-6.config
@@ -24,7 +24,8 @@
         "scss/_variables.scss",
         "scss/_common.scss",
         "scss/_hero-image.scss",
-        "scss/_footer.scss"
+        "scss/_footer.scss",
+        "scss/_header.scss"
       ]
     }
   ],
